[gd_scene load_steps=16 format=3 uid="uid://b8tqk6cbbjj7"]

[ext_resource type="Script" path="res://Scripts/audio_manager.gd" id="1_xjmc6"]
[ext_resource type="AudioStream" uid="uid://cruap36wbus5u" path="res://Sounds/Hit.wav" id="2_dpuvo"]
[ext_resource type="AudioStream" uid="uid://vo0qh2wak648" path="res://Sounds/Absorb.wav" id="2_yojip"]
[ext_resource type="AudioStream" uid="uid://bx4cdds863fji" path="res://Sounds/Mega Buster.wav" id="3_378fd"]
[ext_resource type="AudioStream" uid="uid://bw158pairolfc" path="res://Sounds/Death.wav" id="3_wfj3t"]
[ext_resource type="AudioStream" uid="uid://cf1cncys0r7yw" path="res://Sounds/Enemy Hit.wav" id="4_lg26p"]
[ext_resource type="AudioStream" uid="uid://dnpluyd3om3m6" path="res://Sounds/Extra Life.wav" id="5_tl3rp"]
[ext_resource type="AudioStream" uid="uid://dx5rqhjig6t53" path="res://Sounds/Fire.wav" id="6_efhav"]
[ext_resource type="AudioStream" uid="uid://bfgjtcd5t3t6o" path="res://Sounds/Gate.wav" id="7_88xw1"]
[ext_resource type="AudioStream" uid="uid://d157s1y0av84d" path="res://Sounds/Landing.wav" id="8_y4jef"]
[ext_resource type="AudioStream" uid="uid://dd3fbybffnowi" path="res://Sounds/Menu.wav" id="9_f671a"]
[ext_resource type="AudioStream" uid="uid://jam1e3leocge" path="res://Sounds/Pause.wav" id="12_bjb6m"]
[ext_resource type="AudioStream" uid="uid://8mligusyr34c" path="res://Sounds/Recover.wav" id="13_3wnqb"]
[ext_resource type="AudioStream" uid="uid://b42xp4ls5nb42" path="res://Sounds/11 - Dink.wav" id="14_km18r"]
[ext_resource type="AudioStream" uid="uid://b54nlqfane1ky" path="res://Sounds/Thwomp.wav" id="15_bwb6j"]

[node name="AudioManager" type="Node"]
process_mode = 3
script = ExtResource("1_xjmc6")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="SoundPlayers" type="Node" parent="."]

[node name="AbsorbSound" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource("2_yojip")
max_polyphony = 2

[node name="DeathSound" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource("3_wfj3t")
max_polyphony = 2

[node name="EnemyHurtSound" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource("4_lg26p")
max_polyphony = 6

[node name="ExtraLifeSound" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource("5_tl3rp")

[node name="FireSound" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource("6_efhav")
max_polyphony = 4

[node name="GateSound" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource("7_88xw1")

[node name="LandingSound" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource("8_y4jef")

[node name="MenuSound" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource("9_f671a")

[node name="PlayerHurtSound" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource("2_dpuvo")

[node name="PlayerShootSound" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource("3_378fd")
max_polyphony = 5

[node name="PauseSound" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource("12_bjb6m")

[node name="RecoverSound" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource("13_3wnqb")

[node name="ReflectedSound" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource("14_km18r")
max_polyphony = 5

[node name="StompSound" type="AudioStreamPlayer" parent="SoundPlayers"]
stream = ExtResource("15_bwb6j")
max_polyphony = 2
